--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -4,11 +4,11 @@
 		<app-index-search></app-index-search>
 	</mat-card>
 
-	<mat-card class="index-card">
+	<mat-card class="index-card index-intel-card">
 		<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0;">
 
       <h2 style="cursor: pointer; margin: 0;">
-        Showing your combined intel for:&nbsp;
+        <span class="hidden-xs hidden-sm">Showing your combined intel for:&nbsp;</span>
 	      <div class="name-circle" (click)="copyBB()">
 		      <img style="height: 25px; margin-top: -5px;" src="../../assets/images/town_ico.png"/>&nbsp;
 		      <span class="gd-brown">{{townName}}</span>
