--- a/src/app/auth/profile/components/indexes/indexes.component.scss
+++ b/src/app/auth/profile/components/indexes/indexes.component.scss
@@ -52,6 +52,23 @@
 //  content: "Leave ";
 //}
 
+.inactive-index-row {
+  color: rgba(0,0,0,0.3);
+  a {
+    color: rgba(0,0,0,0.3);
+  }
+  .index-btn-browse {
+    opacity: .4;
+  }
+}
+
+.index-filters {
+  select {
+    width: 100%;
+    height: 34px;
+  }
+}
+
 .index-list {
 
 }
