--- a/src/app/indexer/player/player.component.html
+++ b/src/app/indexer/player/player.component.html
@@ -4,12 +4,12 @@
 		<app-index-search></app-index-search>
 	</mat-card>
 
-	<mat-card [ngClass]="embedded?'embedded-intel-card':'index-card'">
+	<mat-card [ngClass]="embedded?'embedded-intel-card':'index-card'" class="index-intel-card">
 		<div [ngClass]="{'embedded-padding': embedded}">
 			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0;" *ngIf="!embedded">
 
 				<h2 style="cursor: pointer; margin: 0;">
-					Showing your combined intel for:&nbsp;
+          <span class="hidden-xs hidden-sm">Showing your combined intel for:&nbsp;</span>
 					<div class="name-circle" (click)="copyBB()">
 						<img style="height: 25px; margin-top: -5px;" src="../../assets/images/player_ico.png"/>&nbsp;
 						<span class="gd-brown">{{playerName}}</span>
